# conjet

./: .chum-mem  .conjetignore  .gitignore  AGENTS.md  CLAUDE.md  CONJET_IMPLEMENTATION_PLAN.md  Cargo.toml  Package.resolved  Package.swift  README.md
.chum-cache/: manifest.tsv  session-codex-019e7384-7bf0-7823-873c-2b5402dbe6e4.json  session-codex-019e7bbc-0ca4-7161-a86c-acf95d10e4b6.json  sync-rules.json
.codex/: hooks.json
Casks/: conjet.rb
Formula/: conjet.rb
bench/: README.md
benchmarks/: Package.resolved  Package.swift  README.md
build-support/: conjet-debug.entitlements  conjet-release.entitlements  create-macos-dmg.sh  notarize-macos-dmg.sh  qa-published-ports-e2e.sh  render-homebrew-cask.sh  render-homebrew-formula.sh  run-chum-mem-memory-trace.sh  run-conjet-core-release-local.sh  run-jetstream-boot-proof.sh  run-jetstream-rust-local.sh  run-rust-vmm-memory-qa.sh  sign-debug.sh  stage-macos-app.sh
conjetfs/: README.md
docs/: ai-agents-and-skills.md  architecture.md  benchmark-methodology.md  conjetnet-turbo.md  (+7 more)
jetstream/: Cargo.toml  README.md  build.rs
jetstream/src/: lib.rs  main.rs
jetstream/src/arch/: aarch64.rs
jetstream/src/devices/: balloon.rs  block.rs  bus.rs  mod.rs  net.rs  pl011.rs  psci.rs  virtio.rs  virtqueue.rs  vsock.rs
jetstream/src/hvf/: boot.rs  ffi.rs  gic.rs  mod.rs  smoke.rs  vmnet.rs  vmnet_shim.c
jetstream/src/vmm/: boot.rs  config.rs  debug_flags.rs  docker_probe.rs  fdt.rs  machine.rs  memory.rs  mod.rs  vstate.rs
jetstream/tests/: boot_plan.rs  device_models.rs  docker_probe.rs  virtio_execution.rs
(+254 files in other folders)
