[package]
name = "jetstream"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
description = "Conjet Jetstream microVM monitor for macOS Hypervisor.framework"
license = "UNLICENSED"

[[bin]]
name = "jetstream"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
bitflags = "2.6"
clap = { version = "4.5", features = ["derive"] }
libc = "0.2"
memmap2 = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[dev-dependencies]
tempfile = "3.14"

